<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employee_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/employee_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/employee_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/name_label"
            app:layout_constraintEnd_toStartOf="@+id/employee_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/employee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/employee_name_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Mr White" />

        <TextView
            android:id="@+id/employee_email_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/email_label"
            app:layout_constraintEnd_toStartOf="@+id/employee_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employee_name_label"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/employee_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/employee_email_label"
            app:layout_constraintTop_toBottomOf="@+id/employee_name"
            tools:text="mrwhite@cards.com" />

        <TextView
            android:id="@+id/employee_unit_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/business_unit_label"
            app:layout_constraintEnd_toStartOf="@+id/employee_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employee_email_label"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/employee_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/employee_unit_label"
            app:layout_constraintTop_toBottomOf="@+id/employee_email"
            tools:text="Sales" />

        <TextView
            android:id="@+id/employee_department_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/department_label"
            app:layout_constraintEnd_toStartOf="@+id/employee_department"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employee_unit_label"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/employee_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/employee_department_label"
            app:layout_constraintTop_toBottomOf="@+id/employee_unit"
            tools:text="Customer Care" />

        <TextView
            android:id="@+id/employee_address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/local_office_label"
            app:layout_constraintEnd_toStartOf="@+id/employee_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employee_department_label"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/employee_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/employee_address_label"
            app:layout_constraintTop_toBottomOf="@+id/employee_department"
            tools:text="Copenhagen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>